--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -5,6 +5,24 @@
     </div>
     <ul>
         <% for (const campground of campgrounds)  {%>
-           <li><a href="campgrounds/<%= campground._id %>"><%= campground.title %></a></li> 
+           <div class="card mb-3">
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="<%= campground.image %>" alt="" class="img-fluid">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <div class="card-body">
+                            <h5 class="card-title"><%= campground.title %></h5>
+                            <p class="card-text"><%= campground.description %></p>
+                            <p class="card-text">
+                                <small class="text-secondary"><%= campground.location %></small>
+                            </p>
+                            <a href="campgrounds/<%= campground._id %>" class="btn btn-primary">View</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+           </div>
        <% } %>
     </ul>
